# LocalSemanticFileManager

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  start.bat  start.ps1
config/: rules.json  settings.yaml
src/: __init__.py  config.py  main.py
src/indexer/: __init__.py  semantic_indexer.py
src/ingestion/: __init__.py  file_parser.py
src/janitor/: __init__.py  auto_move_manager.py
src/search/: __init__.py  semantic_search.py
src/utils/: __init__.py  text_chunker.py
src/watcher/: __init__.py  file_watcher.py
tests/: __init__.py  test_indexer.py  test_parser.py  test_search.py
ui/: app.py
